--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Jiahua Huang"
   avatar           : "hjh.jpg"
-  bio              : "Eng.D in Computer Science, SCUT cooperate with PCL"
+  bio              : "ph.D in Computer Science, SCUT cooperate with PCL"
   location         : "Shenzhen, China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
